Fix Feature/Filter Overlap On Zoom Out
Fixed some overlapping between the elements when zoom < 33%.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -237,7 +237,7 @@ header .mobile {
 }
 
 .feature {
-  max-height: 39.6875rem;
+  min-height: 39.6875rem;
   flex: 1;
   padding: 2rem;
   margin: 0px 1.25rem;
@@ -250,7 +250,12 @@ header .mobile {
   margin: 0 auto;
 }
 
+.feature .image-container img {
+  margin: 2rem auto;
+}
+
 .feature .content {
+  flex-shrink: 0;
   padding: 2.5rem 0;
 }
 
@@ -259,6 +264,7 @@ header .mobile {
   font-size: 2.25rem;
   font-weight: bold;
   color: #4a4a4a;
+  line-height: 1.2;
 }
 
 .feature h3 {
